# cognizantaimlapr2026

day2/: pyproject.toml
day2/docs/source/: conf.py  first.rst  start.rst
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  first.py  start.py
day2/src/models/: customer.py
day2/src/store/: customer_store.py
day2/src/view/: cusomter_view.py
day3/: pyproject.toml  report.html
day3/configuration/: logger_configuration.py
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day3/src/exceptions/: doctor_not_found_exception.py
day3/src/models/: appointment.py  doctor.py  patient.py  persons.py  role.py  staff.py
day3/src/stores/: appointment_store.py  doctor_store.py  patient_store.py
day3/src/utils/: app.py  main.py
day3/test/: doctors.csv  patients.csv
day3/test/contract_testing/: test_doctor.py  test_doctor_store.py  test_patient.py
day4/: pyproject.toml
day4/Banking.egg-info/: PKG-INFO  requires.txt
day4/src/data_loaders/: customer_data_loader.py
day4/src/models/: customer.py  full_name.py  gender.py  transaction.py
day4/src/utils/: customer_app.py
day5/: .env  pyproject.toml
day5/src/dataloaders/: customer_json_data_loader.py  customer_txt_data_loader.py
day5/src/utils/: app.py  app_1.py  pipeline_runner.py
day6/: .env  pyproject.toml
day6/Concept_Learning.egg-info/: SOURCES.txt  requires.txt
day6/src/configurations/: conf.py
day6/src/utils/: clock.py
