[project]
name = "Concept_Learning"
version = "1.0.0"
description = "Learning core Python concepts such as AsyncIO, multiprocessing, and multithreading."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Ishwar Mullur", email = "ishwarmullur888@gmail.com" }
]

# ─────────────────────────────
# Production dependencies
# ─────────────────────────────
dependencies = [
    "faker>=18.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
    "websockets>=11.0"
]

# ─────────────────────────────
# Development dependencies
# ─────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.10.1",
    "sphinx>=5.0.0"
]

# ─────────────────────────────
# Tool configuration
# ─────────────────────────────
[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
